--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dhaiwat10/react-link-preview": "^1.15.0",
     "axios": "^1.6.2",
+    "cors-anywhere": "^0.4.4",
     "next": "14.0.4",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
@@ -18,6 +19,7 @@
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-tiny-link": "^3.6.1",
     "react-tooltip": "^5.25.0",
     "remark-gfm": "^4.0.0"
   },
